bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:6: error: type mismatch;
 found   : Unit
 required: Boolean
    if(a>0 && b>0){return false
    ^